--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
+    tools:context=".Feedback"
     android:background="#f8b451"
     android:weightSum="10"
     android:orientation="vertical"
@@ -22,7 +22,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/login"
+            android:src="@drawable/post"
+            android:padding="40dp"
+
             />
 
 
@@ -35,7 +37,7 @@
 
             android:textSize="25dp"
             android:textColor="@color/black"
-            android:text="Login"
+            android:text="Feedback"
 
             android:layout_alignParentBottom="true"
             android:layout_margin="6dp"
@@ -55,36 +57,31 @@
         >
 
         <EditText
-            android:id="@+id/email"
-            android:hint="e-mail..."
-            android:paddingLeft="10dp"
-            android:textSize="15dp"
-            android:gravity="center|left"
+            android:id="@+id/feedback"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@drawable/roundcorners"
+            android:layout_height="200dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
-            />
+            android:layout_marginRight="10dp"
+            android:background="@drawable/roundcorners"
+            android:backgroundTint="@color/white"
+            android:gravity="top|left"
+            android:hint="Feedback..."
+            android:padding="10dp"
+            android:textSize="15dp" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_below="@+id/email"
-            android:hint="password..."
-            android:paddingLeft="10dp"
-            android:textSize="15dp"
-            android:gravity="center|left"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@drawable/roundcorners"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/feedback"
+            android:layout_alignRight="@+id/feedback"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/roundpic"
+            android:padding="10dp"
+            android:src="@drawable/plus" />
 
         <TextView
-            android:id="@+id/login"
+            android:id="@+id/submit"
             android:layout_alignParentBottom="true"
             android:textSize="25dp"
             android:gravity="center"
@@ -93,7 +90,7 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/roundcorners"
             android:layout_margin="20dp"
-            android:text="Login"
+            android:text="Submit"
             android:clickable="true"
             android:focusable="true"
             />
@@ -118,7 +115,7 @@
             android:clickable="true"
             android:focusable="true"
 
-        />
+            />
         <ImageView
             android:id="@+id/registeration"
             android:layout_width="40dp"
@@ -135,6 +132,16 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/search_icon"
+            android:layout_margin="20dp"
+            android:padding="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            />
+        <ImageView
+            android:id="@+id/purchase"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/shopping"
             android:layout_margin="20dp"
             android:padding="10dp"
             android:clickable="true"
