--- a/app/src/main/res/layout/activity_dd_view_forms.xml
+++ b/app/src/main/res/layout/activity_dd_view_forms.xml
@@ -8,7 +8,6 @@
     android:background="#f8b451"
     >
 
-
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -29,14 +28,17 @@
         android:layout_below="@+id/title"
         android:layout_margin="10dp"
         />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/form_list"
-        android:layout_alignTop="@id/view_section"
-        android:layout_alignLeft="@id/view_section"
-        android:layout_alignBottom="@id/view_section"
-        android:layout_alignRight="@id/view_section"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        />
+        android:layout_alignLeft="@id/view_section"
+        android:layout_alignTop="@id/view_section"
+        android:layout_alignRight="@id/view_section"
+        android:layout_alignBottom="@id/view_section"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp" />
 </RelativeLayout>
