--- a/app/src/main/res/layout/d_d_reg_form.xml
+++ b/app/src/main/res/layout/d_d_reg_form.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
     <View
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@color/primary"
@@ -19,6 +21,19 @@
         android:text="FirstName"
         android:textColor="@color/black"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/testdrive_id"
+        android:layout_below="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="1"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/lname"
         android:layout_width="wrap_content"
