--- a/app/src/main/res/layout/activity_dd_view_forms.xml
+++ b/app/src/main/res/layout/activity_dd_view_forms.xml
@@ -29,16 +29,75 @@
         android:layout_margin="10dp"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/form_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <EditText
+        android:id="@+id/id_to_delete"
+        android:layout_width="190dp"
+        android:layout_height="30dp"
         android:layout_alignLeft="@id/view_section"
         android:layout_alignTop="@id/view_section"
-        android:layout_alignRight="@id/view_section"
-        android:layout_alignBottom="@id/view_section"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/roundcorners"
+        android:backgroundTint="@color/white"
+        android:gravity="center|left"
+        android:hint="Enter Form ID"
+        android:inputType="number"
+        android:paddingLeft="20dp"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/approve_button"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_alignTop="@id/view_section"
+        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toLeftOf="@id/reject_button"
+        android:background="@drawable/roundcorners"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:text="Approve"
+        android:textSize="15dp"
+        android:textColor="@color/white"
+        android:backgroundTint="#4EFF0D"
+        />
+
+    <TextView
+        android:id="@+id/reject_button"
+        android:layout_alignEnd="@id/view_section"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_alignTop="@id/view_section"
+        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/roundcorners"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:text="Reject"
+        android:textSize="15dp"
+        android:textColor="@color/white"
+        android:backgroundTint="#FF5353"
+        />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/form_list"
+        android:layout_below="@id/id_to_delete"
+        android:layout_alignLeft="@id/view_section"
+        android:layout_alignBottom="@id/view_section"
+        android:layout_alignRight="@id/view_section"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        />
 </RelativeLayout>
