--- a/app/src/main/res/layout/d_d_customer.xml
+++ b/app/src/main/res/layout/d_d_customer.xml
@@ -1,96 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <View
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/primary"
-        android:layout_margin="5dp"
-    />
+        android:layout_height="130dp"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="20dp"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
 
-    <TextView
-        android:id="@+id/fname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="FirstName"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/lname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SecondName"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_toRightOf="@id/fname"
-        />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/primary" />
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="email@nu.edu.pk"
-        android:layout_marginLeft="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/fname"
-        />
+            <TextView
+                android:id="@+id/fname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="FirstName"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/lname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SecondName"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_toRightOf="@id/fname"
+                />
 
-
-    <TextView
-        android:id="@+id/phone_no"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Phone No. 090078601"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_alignParentEnd="true"
-        />
+            <TextView
+                android:id="@+id/email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="email@nu.edu.pk"
+                android:layout_marginLeft="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/fname"
+                />
 
 
-    <TextView
-        android:id="@+id/cnic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/phone_no"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:text="CNIC. 12345-1234567-1"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/address_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/email"
+            <TextView
+                android:id="@+id/dealer_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="12"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/phone_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp"
+                android:text="Phone No. 090078601"
+                android:textColor="@color/black"
+                android:layout_below="@id/dealer_id"
+                android:textStyle="bold" />
 
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:text="Address:"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
 
-        android:text="H#57, St.22, Phase#1, Bahria Town, Islamabad, Pakistan"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/address_title"
-        />
+            <TextView
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/email"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/white" />
+
+            <TextView
+                android:id="@+id/type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/email"
+
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Type: SUV"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/salary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+
+                android:text="Salary: Rs. 50,000"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/type"
+                />
+
+            <TextView
+                android:id="@+id/n_sales"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/salary"
+
+                android:layout_marginLeft="10dp"
+                android:text="Total Sales: 43"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
 
 
