--- a/app/src/main/res/layout/d_d_manage.xml
+++ b/app/src/main/res/layout/d_d_manage.xml
@@ -1,145 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <View
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/primary"
-        android:layout_margin="5dp"
-        />
+        android:layout_height="130dp"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="20dp"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/primary"
+                />
 
-    <TextView
-        android:id="@+id/fname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="FirstName"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/lname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SecondName"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_toRightOf="@id/fname"
-        />
+            <TextView
+                android:id="@+id/booking_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="ID"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="email@nu.edu.pk"
-        android:layout_marginLeft="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/fname"
-        />
+            <TextView
+                android:layout_below="@+id/booking_id"
+                android:id="@+id/fname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="FirstName"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_below="@+id/booking_id"
+                android:id="@+id/lname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SecondName"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_toRightOf="@id/fname"
+                />
 
-
-    <TextView
-        android:id="@+id/phone_no"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Phone No. 090078601"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_alignParentEnd="true"
-        />
-
-
-    <TextView
-        android:id="@+id/buying_option"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/phone_no"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:text="Installments:Rs.50000/month"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="email@nu.edu.pk"
+                android:layout_marginLeft="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/fname"
+                />
 
 
-    <TextView
-        android:id="@+id/text_buy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/email"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:text="Car to buy:"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/car_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_buy"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:text="car Name"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/phone_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Phone No. 090078601"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_alignParentEnd="true"
+                />
 
 
-    <TextView
-        android:id="@+id/car_color"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-
-        android:text="car Color"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/car_name"
-        />
-
-    <TextView
-        android:id="@+id/car_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-
-        android:text="type"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/car_color"
-        />
+            <TextView
+                android:id="@+id/buying_option"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/phone_no"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp"
+                android:text="Installments:Rs.50000/month"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/car_model"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentEnd="true"
-        android:text="car model"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/car_name"
-        />
+            <TextView
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/email"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/white" />
 
-    <TextView
-        android:id="@+id/car_cost"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentEnd="true"
-        android:text="cost"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/car_model"
-        />
+            <TextView
+                android:id="@+id/text_buy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/line"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:text="Car to buy:"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/car_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/text_buy"
+                android:layout_toRightOf="@id/text_buy"
+
+                android:layout_marginLeft="10dp"
+                android:text="car Name"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/car_color"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+
+                android:text="car Color"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/car_name"
+                />
+
+            <TextView
+                android:id="@+id/car_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+
+                android:text="type"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/car_color"
+                />
+
+
+            <TextView
+                android:id="@+id/car_model"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentEnd="true"
+                android:text="car model"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/car_name"
+                />
+
+            <TextView
+                android:id="@+id/car_cost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentEnd="true"
+                android:text="cost"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/car_model"
+                />
+
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
 
 
